generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  ADMIN
  MANAGER
  EMPLOYEE
  CLIENT
}

enum OrderStatus {
  PENDING
  CONFIRMED
  PREPARING
  READY
  SERVED
  BILLED
  OUT_FOR_DELIVERY
  DELIVERED
  COMPLETED
  CANCELLED
}

enum TableStatus {
  AVAILABLE
  OCCUPIED
  RESERVED
}

enum OrderType {
  DINE_IN
  TAKEAWAY
  DELIVERY
}

enum PaymentMethod {
  CASH
  CARD
  TRANSFER
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
  REFUNDED
}

enum StockMovementType {
  IN
  OUT
  ADJUSTMENT
}

enum SupplierOrderStatus {
  DRAFT
  SUBMITTED
  PARTIALLY_RECEIVED
  RECEIVED
  CANCELLED
}

enum ReservationStatus {
  PENDING
  CONFIRMED
  SEATED
  COMPLETED
  CANCELLED
  NO_SHOW
}

enum LoyaltyTransactionType {
  EARN_ORDER
  BONUS_MILESTONE
  REDEEM_REWARD
  MANUAL_ADJUSTMENT
}

enum ExpenseCategory {
  FIXED
  VARIABLE
}

enum EmploymentStatus {
  ACTIVE
  INACTIVE
  TERMINATED
}

enum ContractType {
  CDI
  CDD
  FREELANCE
  INTERNSHIP
}

enum AttendanceStatus {
  PRESENT
  LATE
  ABSENT
}

enum AbsenceStatus {
  PENDING
  APPROVED
  REJECTED
}

enum BankMovementType {
  CREDIT
  DEBIT
}

enum ReviewType {
  DISH
  SERVICE
}

model User {
  id           String     @id @default(cuid())
  email        String     @unique
  passwordHash String
  fullName     String
  phone        String?
  role         UserRole   @default(CLIENT)
  isActive     Boolean    @default(true)
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  customerOrders Order[]  @relation("CustomerOrders")
  employeeOrders Order[]  @relation("EmployeeOrders")
  assignedTables DiningTable[] @relation("TableAssignedWaiter")
  carts        Cart[]
  payments     Payment[]
  addresses    ClientAddress[]
  preference   ClientPreference?
  favorites    FavoriteMenuItem[]
  reservations Reservation[]
  reviews      Review[]
  loyaltyAccount LoyaltyAccount?
  loyaltyTransactions LoyaltyTransaction[]
  expenseRecords Expense[]      @relation("ExpensePaidBy")
  cashClosings  CashClosing[]   @relation("CashClosedBy")
  employeeProfiles Employee[]
}

model DiningTable {
  id               String      @id @default(cuid())
  code             String      @unique
  seats            Int
  status           TableStatus @default(AVAILABLE)
  assignedWaiterId String?
  createdAt        DateTime    @default(now())
  updatedAt        DateTime    @updatedAt
  assignedWaiter   User?       @relation("TableAssignedWaiter", fields: [assignedWaiterId], references: [id])
  orders           Order[]
  reservations     Reservation[]

  @@index([status])
  @@index([assignedWaiterId])
}

model Reservation {
  id         String            @id @default(cuid())
  userId     String?
  tableId    String
  guestCount Int
  startAt    DateTime
  endAt      DateTime
  status     ReservationStatus @default(PENDING)
  notes      String?
  cancelledAt DateTime?
  reminderSentAt DateTime?
  createdAt  DateTime          @default(now())
  updatedAt  DateTime          @updatedAt
  user       User?             @relation(fields: [userId], references: [id])
  table      DiningTable       @relation(fields: [tableId], references: [id])

  @@index([tableId, startAt, endAt])
  @@index([userId])
  @@index([status])
}

model Category {
  id        String     @id @default(cuid())
  name      String     @unique
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  menuItems MenuItem[]
}

model MenuItem {
  id           String              @id @default(cuid())
  name         String
  description  String?
  imageUrl     String?
  price        Decimal             @db.Decimal(10, 2)
  isAvailable  Boolean             @default(true)
  vegetarian   Boolean             @default(false)
  halal        Boolean             @default(false)
  glutenFree   Boolean             @default(false)
  categoryId   String
  createdAt    DateTime            @default(now())
  updatedAt    DateTime            @updatedAt
  category     Category            @relation(fields: [categoryId], references: [id])
  orderItems   OrderItem[]
  ingredients  MenuItemIngredient[]
  formulaItems FormulaBundleItem[]
  cartItems    CartItem[]
  favorites    FavoriteMenuItem[]
  reviews      Review[]

  @@index([categoryId])
}

model ClientAddress {
  id          String   @id @default(cuid())
  userId      String
  label       String
  addressLine String
  city        String
  postalCode  String?
  isDefault   Boolean  @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  user        User     @relation(fields: [userId], references: [id])

  @@index([userId])
}

model ClientPreference {
  id                     String   @id @default(cuid())
  userId                 String   @unique
  dietaryRestrictions    String?
  allergens              String?
  preferredDeliveryNotes String?
  marketingOptIn         Boolean  @default(false)
  createdAt              DateTime @default(now())
  updatedAt              DateTime @updatedAt
  user                   User     @relation(fields: [userId], references: [id])
}

model FavoriteMenuItem {
  id         String   @id @default(cuid())
  userId     String
  menuItemId String
  createdAt  DateTime @default(now())
  user       User     @relation(fields: [userId], references: [id])
  menuItem   MenuItem @relation(fields: [menuItemId], references: [id])

  @@unique([userId, menuItemId])
  @@index([userId])
  @@index([menuItemId])
}

model FormulaBundle {
  id          String              @id @default(cuid())
  name        String              @unique
  description String?
  price       Decimal             @db.Decimal(10, 2)
  isAvailable Boolean             @default(true)
  createdAt   DateTime            @default(now())
  updatedAt   DateTime            @updatedAt
  items       FormulaBundleItem[]

  @@index([isAvailable])
}

model FormulaBundleItem {
  id            String        @id @default(cuid())
  bundleId      String
  menuItemId    String
  quantity      Int           @default(1)
  formulaBundle FormulaBundle @relation(fields: [bundleId], references: [id])
  menuItem      MenuItem      @relation(fields: [menuItemId], references: [id])

  @@unique([bundleId, menuItemId])
  @@index([bundleId])
  @@index([menuItemId])
}

model Ingredient {
  id              String              @id @default(cuid())
  name            String              @unique
  imageUrl        String?
  unit            String
  minStockLevel   Decimal             @db.Decimal(10, 2)
  defaultSupplierId String?
  createdAt       DateTime            @default(now())
  updatedAt       DateTime            @updatedAt
  defaultSupplier Supplier?           @relation(fields: [defaultSupplierId], references: [id])
  inventory       Inventory?
  menuItems       MenuItemIngredient[]
  stockMovements  StockMovement[]
  supplierOrderItems SupplierOrderItem[]
  supplierCatalogItems SupplierCatalogItem[]
}

model Supplier {
  id          String          @id @default(cuid())
  name        String
  email       String?
  phone       String?
  address     String?
  isActive    Boolean         @default(true)
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt
  ingredients Ingredient[]
  orders      SupplierOrder[]
  catalogItems SupplierCatalogItem[]

  @@unique([name])
}

model SupplierOrder {
  id           String              @id @default(cuid())
  supplierId   String
  status       SupplierOrderStatus @default(DRAFT)
  notes        String?
  orderedAt    DateTime            @default(now())
  receivedAt   DateTime?
  totalAmount  Decimal             @db.Decimal(12, 2) @default(0)
  createdAt    DateTime            @default(now())
  updatedAt    DateTime            @updatedAt
  supplier     Supplier            @relation(fields: [supplierId], references: [id])
  items        SupplierOrderItem[]

  @@index([supplierId])
  @@index([status])
}

model SupplierOrderItem {
  id               String        @id @default(cuid())
  supplierOrderId  String
  ingredientId     String
  supplierCatalogItemId String?
  quantity         Decimal       @db.Decimal(10, 2)
  unitCost         Decimal       @db.Decimal(10, 2)
  lineTotal        Decimal       @db.Decimal(12, 2)
  createdAt        DateTime      @default(now())
  supplierOrder    SupplierOrder @relation(fields: [supplierOrderId], references: [id])
  ingredient       Ingredient    @relation(fields: [ingredientId], references: [id])
  supplierCatalogItem SupplierCatalogItem? @relation(fields: [supplierCatalogItemId], references: [id])

  @@unique([supplierOrderId, ingredientId])
  @@index([supplierOrderId])
  @@index([ingredientId])
  @@index([supplierCatalogItemId])
}

model Inventory {
  id            String     @id @default(cuid())
  ingredientId  String     @unique
  currentStock  Decimal    @db.Decimal(10, 2)
  updatedAt     DateTime   @updatedAt
  ingredient    Ingredient @relation(fields: [ingredientId], references: [id])
}

model MenuItemIngredient {
  menuItemId      String
  ingredientId    String
  quantityNeeded  Decimal    @db.Decimal(10, 2)
  menuItem        MenuItem   @relation(fields: [menuItemId], references: [id])
  ingredient      Ingredient @relation(fields: [ingredientId], references: [id])

  @@id([menuItemId, ingredientId])
}

model Order {
  id           String       @id @default(cuid())
  orderNumber  Int          @unique @default(autoincrement())
  customerId   String?
  employeeId   String?
  status       OrderStatus  @default(PENDING)
  orderType    OrderType
  tableNumber  Int?
  tableId      String?
  notes        String?
  billNumber   String?      @unique
  billedAt     DateTime?
  subtotal     Decimal      @db.Decimal(10, 2)
  loyaltyDiscount Decimal   @db.Decimal(10, 2) @default(0)
  loyaltyAutoApplied Boolean @default(false)
  tax          Decimal      @db.Decimal(10, 2)
  total        Decimal      @db.Decimal(10, 2)
  createdAt    DateTime     @default(now())
  updatedAt    DateTime     @updatedAt
  customer     User?        @relation("CustomerOrders", fields: [customerId], references: [id])
  employee     User?        @relation("EmployeeOrders", fields: [employeeId], references: [id])
  table        DiningTable? @relation(fields: [tableId], references: [id])
  items        OrderItem[]
  payments     Payment[]
  reviews      Review[]
  loyaltyTransactions LoyaltyTransaction[]

  @@index([customerId])
  @@index([employeeId])
  @@index([tableId])
  @@index([status])
}

model Cart {
  id         String     @id @default(cuid())
  userId     String
  isActive   Boolean    @default(true)
  createdAt  DateTime   @default(now())
  updatedAt  DateTime   @updatedAt
  user       User       @relation(fields: [userId], references: [id])
  items      CartItem[]

  @@index([userId])
}

model CartItem {
  id          String    @id @default(cuid())
  cartId      String
  menuItemId  String
  quantity    Int
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  cart        Cart      @relation(fields: [cartId], references: [id])
  menuItem    MenuItem  @relation(fields: [menuItemId], references: [id])

  @@unique([cartId, menuItemId])
  @@index([cartId])
}

model OrderItem {
  id          String    @id @default(cuid())
  orderId     String
  menuItemId  String
  quantity    Int
  unitPrice   Decimal   @db.Decimal(10, 2)
  totalPrice  Decimal   @db.Decimal(10, 2)
  order       Order     @relation(fields: [orderId], references: [id])
  menuItem    MenuItem  @relation(fields: [menuItemId], references: [id])
  reviews     Review[]

  @@index([orderId])
  @@index([menuItemId])
}

model Review {
  id          String   @id @default(cuid())
  userId      String
  orderId     String
  orderItemId String?
  menuItemId  String?
  type        ReviewType @default(DISH)
  rating      Int
  comment     String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  user        User     @relation(fields: [userId], references: [id])
  order       Order    @relation(fields: [orderId], references: [id])
  orderItem   OrderItem? @relation(fields: [orderItemId], references: [id])
  menuItem    MenuItem? @relation(fields: [menuItemId], references: [id])

  @@unique([userId, orderItemId])
  @@index([menuItemId, createdAt])
  @@index([type, createdAt])
  @@index([orderId])
  @@index([userId])
}

model LoyaltyAccount {
  id              String   @id @default(cuid())
  userId          String   @unique
  points          Int      @default(0)
  lifetimePoints  Int      @default(0)
  completedOrders Int      @default(0)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  user            User     @relation(fields: [userId], references: [id])
  transactions    LoyaltyTransaction[]

  @@index([points])
}

model LoyaltyTransaction {
  id           String                 @id @default(cuid())
  accountId    String
  userId       String
  orderId      String?
  type         LoyaltyTransactionType
  pointsDelta  Int
  balanceAfter Int
  reason       String?
  referenceKey String?                @unique
  createdAt    DateTime               @default(now())
  account      LoyaltyAccount         @relation(fields: [accountId], references: [id])
  user         User                   @relation(fields: [userId], references: [id])
  order        Order?                 @relation(fields: [orderId], references: [id])

  @@index([accountId, createdAt])
  @@index([userId, createdAt])
  @@index([orderId])
}

model Payment {
  id            String        @id @default(cuid())
  orderId        String
  userId         String?
  amount         Decimal       @db.Decimal(10, 2)
  method         PaymentMethod
  status         PaymentStatus @default(PENDING)
  transactionRef String?
  isReconciled   Boolean       @default(false)
  reconciledAt   DateTime?
  reconciliationSessionId String?
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt
  order          Order         @relation(fields: [orderId], references: [id])
  user           User?         @relation(fields: [userId], references: [id])
  reconciliationSession ReconciliationSession? @relation(fields: [reconciliationSessionId], references: [id])

  @@index([orderId])
  @@index([createdAt])
  @@index([isReconciled])
  @@index([reconciliationSessionId])
}

model CashClosing {
  id            String   @id @default(cuid())
  closedDate    DateTime @unique
  expectedCash  Decimal  @db.Decimal(10, 2)
  actualCash    Decimal  @db.Decimal(10, 2)
  discrepancy   Decimal  @db.Decimal(10, 2)
  totalRevenue  Decimal  @db.Decimal(10, 2)
  totalPayments Int
  isReconciled  Boolean  @default(false)
  reconciledAt  DateTime?
  reconciliationSessionId String?
  closedById    String?
  notes         String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  closedBy      User?    @relation("CashClosedBy", fields: [closedById], references: [id])
  reconciliationSession ReconciliationSession? @relation(fields: [reconciliationSessionId], references: [id])

  @@index([closedDate])
  @@index([isReconciled])
  @@index([reconciliationSessionId])
}

model Employee {
  id               String           @id @default(cuid())
  userId           String?          @unique
  fullName         String
  email            String?
  phone            String?
  position         String
  employmentStatus EmploymentStatus @default(ACTIVE)
  hireDate         DateTime
  baseSalary       Decimal          @db.Decimal(10, 2)
  contractType     ContractType
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt
  user             User?            @relation(fields: [userId], references: [id])
  attendances      Attendance[]
  absences         Absence[]
  payrollRecords   PayrollRecord[]

  @@index([employmentStatus])
  @@index([position])
}

model Attendance {
  id         String           @id @default(cuid())
  employeeId String
  date       DateTime
  checkInAt  DateTime?
  checkOutAt DateTime?
  status     AttendanceStatus @default(PRESENT)
  notes      String?
  createdAt  DateTime         @default(now())
  updatedAt  DateTime         @updatedAt
  employee   Employee         @relation(fields: [employeeId], references: [id])

  @@unique([employeeId, date])
  @@index([date])
  @@index([status])
}

model Absence {
  id         String        @id @default(cuid())
  employeeId String
  date       DateTime
  reason     String
  status     AbsenceStatus @default(PENDING)
  createdAt  DateTime      @default(now())
  updatedAt  DateTime      @updatedAt
  employee   Employee      @relation(fields: [employeeId], references: [id])

  @@index([employeeId, date])
  @@index([status])
}

model PayrollRecord {
  id            String   @id @default(cuid())
  employeeId    String
  periodStart   DateTime
  periodEnd     DateTime
  grossSalary   Decimal  @db.Decimal(10, 2)
  cnssDeduction Decimal  @db.Decimal(10, 2)
  taxDeduction  Decimal  @db.Decimal(10, 2)
  otherDeduction Decimal @db.Decimal(10, 2) @default(0)
  netSalary     Decimal  @db.Decimal(10, 2)
  notes         String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  employee      Employee @relation(fields: [employeeId], references: [id])

  @@unique([employeeId, periodStart, periodEnd])
  @@index([periodStart, periodEnd])
}

model BankMovement {
  id            String            @id @default(cuid())
  movementDate  DateTime
  amount        Decimal           @db.Decimal(10, 2)
  type          BankMovementType
  reference     String?
  notes         String?
  isReconciled  Boolean           @default(false)
  reconciledAt  DateTime?
  sessionId     String?
  createdAt     DateTime          @default(now())
  updatedAt     DateTime          @updatedAt
  session       ReconciliationSession? @relation(fields: [sessionId], references: [id])

  @@index([movementDate])
  @@index([type])
  @@index([isReconciled])
  @@index([sessionId])
}

model ReconciliationSession {
  id                String      @id @default(cuid())
  periodStart       DateTime
  periodEnd         DateTime
  expectedTotal     Decimal     @db.Decimal(12, 2)
  bankTotal         Decimal     @db.Decimal(12, 2)
  discrepancy       Decimal     @db.Decimal(12, 2)
  reconciledPayments Int
  reconciledClosings Int
  createdAt         DateTime    @default(now())
  updatedAt         DateTime    @updatedAt
  payments          Payment[]
  cashClosings      CashClosing[]
  bankMovements     BankMovement[]

  @@index([periodStart, periodEnd])
}

model SupplierCatalogItem {
  id             String   @id @default(cuid())
  supplierId     String
  ingredientId   String
  supplierSku    String?
  unit           String?
  leadTimeDays   Int?
  unitPrice      Decimal  @db.Decimal(10, 2)
  isActive       Boolean  @default(true)
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  supplier       Supplier @relation(fields: [supplierId], references: [id])
  ingredient     Ingredient @relation(fields: [ingredientId], references: [id])
  orderItems     SupplierOrderItem[]

  @@unique([supplierId, ingredientId])
  @@index([supplierId])
  @@index([ingredientId])
  @@index([isActive])
}

model Expense {
  id          String          @id @default(cuid())
  title       String
  category    ExpenseCategory
  amount      Decimal         @db.Decimal(10, 2)
  expenseDate DateTime
  paidById    String?
  notes       String?
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt
  paidBy      User?           @relation("ExpensePaidBy", fields: [paidById], references: [id])

  @@index([expenseDate])
  @@index([category])
  @@index([paidById])
}

model StockMovement {
  id            String            @id @default(cuid())
  ingredientId  String
  type          StockMovementType
  quantity      Decimal           @db.Decimal(10, 2)
  reason        String?
  createdAt     DateTime          @default(now())
  ingredient    Ingredient        @relation(fields: [ingredientId], references: [id])

  @@index([ingredientId])
  @@index([createdAt])
}

model DailyStat {
  id            String   @id @default(cuid())
  date          DateTime @unique
  totalRevenue  Decimal  @db.Decimal(12, 2) @default(0)
  totalOrders   Int      @default(0)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}
